# ajour

./: .gitignore  CHANGELOG.md  CLI.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  THEMES.md  TODO.md  TRANSLATE.md  ajour.yml  build.rs  i18n.toml
.cargo/: config
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull-translations.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: commit_to_pr_body.yml  continuous-integration.yml  markdown_lint.yml  pull_poeditor_translations.yml  quickstart.yml  release.yml  release_to_crates.yml  release_to_draft.yml  security-audit.yml  terms.yml  translations.yml
crates/core/: Cargo.toml
crates/core/src/: addon.rs  backup.rs  cache.rs  catalog.rs  curse_api.rs  error.rs  lib.rs  murmur2.rs  network.rs  parse.rs  share.rs  tukui_api.rs  utility.rs  wowi_api.rs
crates/core/src/config/: addons.rs  mod.rs  wow.rs
crates/core/src/fs/: addon.rs  backup.rs  mod.rs  save.rs  theme.rs
crates/core/src/repository/: mod.rs
crates/core/src/repository/backend/: curse.rs  git.rs  hub.rs  mod.rs  townlongyak.rs  tukui.rs  wowi.rs
crates/core/src/theme/: mod.rs
crates/weak_auras/: Cargo.toml
crates/weak_auras/src/: companion.rs  error.rs  lib.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: lib.rs  renderer.rs  style.rs  widget.rs
crates/widgets/src/renderer/: header.rs  table_header.rs  table_row.rs
crates/widgets/src/style/: table_row.rs
crates/widgets/src/widget/: header.rs  table_header.rs  table_row.rs
crates/widgets/src/widget/header/: state.rs
crates/widgets/src/widget/table_header/: state.rs
i18n/po/fr/: ajour.po
locale/: cs.json  cs_CZ.json  da.json  da_DK.json  de.json  de_DE.json  en.json  en_US.json  es.json  es_ES.json  fr.json  fr_FR.json  hu.json  hu_HU.json  nb_NO.json  no.json  pl.json  pt.json  pt_PT.json  ru.json  ru_RU.json  se_SE.json  sk.json  sk_SK.json  sv.json  tr.json  tr_TR.json  uk.json  uk_UA.json  zh-Hans.json  zh_CN.json
resources/linux/: ajour.desktop
resources/osx/Ajour.app/Contents/: Info.plist
resources/snap/: snapcraft.yaml
resources/themes/: ayu-dark.yml  ayu-mirage.yml  dracula.yml  forest-night.yml  gruvbox-dark.yml  gruvbox-light.yml  meh.yml  nord.yml  outrun.yml  solarized-dark.yml  solarized-light.yml
resources/windows/: res.rc
resources/windows/wix/: main.wxs
src/: addon.rs  backup.rs  cli.rs  curse_api.rs  error.rs  fs.rs  lib.rs  localization.rs  main.rs  murmur2.rs  network.rs  parse.rs  process.rs  toc.rs  tukui_api.rs  update.rs  utility.rs  window.rs  wowinterface_api.rs
src/command/: backup.rs  install.rs  mod.rs  paths.rs  update.rs  update_addons.rs  update_weakauras.rs
src/config/: addons.rs  error.rs  mod.rs  tokens.rs  wow.rs
src/fs/: backup.rs  mod.rs  save.rs  theme.rs
src/gui/: element.rs  mod.rs  style.rs  update.rs
src/gui/component/: mod.rs  settings.rs
src/gui/component/settings/: mod.rs  update.rs  view.rs
src/gui/element/: about.rs  catalog.rs  menu.rs  mod.rs  my_addons.rs  my_weakauras.rs  settings.rs  status.rs
src/gui/elements/: about.rs  addon_data.rs  catalog_data.rs  mod.rs  settings.rs  status.rs
src/theme/: mod.rs
src/toc/: addon.rs  mod.rs
src/tray/: autostart.rs  mod.rs
test-data/AutoLog/: AutoLog.toc  Bindings.xml  Core.lua  embeds.xml
test-data/AutoLog/Localisation/: deDE.lua  enUS.lua  esES.lua  esMX.lua  frFR.lua  itIT.lua  koKR.lua  ptBR.lua  ruRU.lua  zhCN.lua  zhTW.lua
test-data/AutoLog/libs/AceConfig-3.0/: AceConfig-3.0.lua
test-data/AutoLog/libs/AceConsole-3.0/: AceConsole-3.0.lua
test-data/AutoLog/libs/AceDB-3.0/: AceDB-3.0.lua
test-data/AutoLog/libs/AceDBOptions-3.0/: AceDBOptions-3.0.lua
test-data/AutoLog/libs/AceEvent-3.0/: AceEvent-3.0.lua
test-data/AutoLog/libs/AceGUI-3.0/: AceGUI-3.0.lua
test-data/AutoLog/libs/AceTimer-3.0/: AceTimer-3.0.lua
test-data/AutoLog/libs/CallbackHandler-1.0/: CallbackHandler-1.0.lua
test-data/AutoLog/libs/LibDataBroker-1.1/: LibDataBroker-1.1.lua
test-data/AutoLog/libs/LibStub/: LibStub.toc
test-data/BeQuiet/: BeQuiet.lua  BeQuiet.toc
test-data/EasyScrap/: Bindings.xml  EasyScrap.lua  EasyScrap.toc  EasyScrap_Filters.lua  EasyScrap_Functions.lua  EasyScrap_ItemDisplay.lua  EasyScrap_Main.lua  EasyScrap_WhatsNew.lua
test-data/EasyScrap/Frames/: EasyScrapEditFilterFrame.lua  EasyScrapFilterFrame.lua  EasyScrapItemFrame.lua  EasyScrapMainFrame.lua  EasyScrapOptionsFrame.lua  EasyScrapXMLFrames.xml  TooltipReader.lua
test-data/Hekili/: Bindings.xml  CHANGELOG.md  CHANGES.txt  Classes.lua  Constants.lua  Core.lua  Events.lua  Formatting.lua  Hekili.lua  Hekili.toc  MultilineEditor.lua  Options.lua  README.md  Scripts.lua  State.lua  Targets.lua  UI.lua  Utils.lua  embeds.xml
test-data/Hekili/Classes/: DeathKnightBlood.lua  DeathKnightFrost.lua  DeathKnightUnholy.lua  DemonHunterHavoc.lua  DemonHunterVengeance.lua  DruidBalance.lua  DruidFeral.lua  DruidGuardian.lua  HunterBeastMastery.lua  HunterMarksmanship.lua  HunterSurvival.lua  MageArcane.lua  MageFire.lua  MageFrost.lua  MonkBrewmaster.lua  MonkMistweaver.lua  MonkWindwalker.lua  PaladinProtection.lua  PaladinRetribution.lua  PriestDiscipline.lua  PriestShadow.lua  RogueAssassination.lua  RogueOutlaw.lua  RogueSubtlety.lua  ShamanElemental.lua  ShamanEnhancement.lua  WarlockAffliction.lua  WarlockDemonology.lua  WarlockDestruction.lua  WarriorArms.lua  WarriorFury.lua  WarriorProtection.lua
test-data/Hekili/Libs/AceAddon-3.0/: AceAddon-3.0.lua
test-data/Hekili/Libs/AceBucket-3.0/: AceBucket-3.0.lua  AceBucket-3.0.xml
test-data/Hekili/Textures/: BlueReset.tga  Cancel.blp  Cycle.blp  DEATHKNIGHT.blp  DRUID.blp  GreenPlus.tga  GreenPlusOutline.tga  GreyStar.tga  LOGO-ORANGE.blp  LOGO-WHITE.blp  MAGE.blp  MONK.blp  PALADIN.blp  PRIEST.blp  Pause.blp  ROGUE.blp  RedX.tga  SHAMAN.blp  TACODOG.blp  WARLOCK.blp  WARNING.blp  WARRIOR.blp  WhiteCopy.tga  WhiteDown.tga  WhiteEye.tga  WhiteMag.tga  WhiteReset.tga  WhiteRight.tga  WhiteStar.tga  WhiteUp.tga  YellowStar.tga
(+102 files in other folders)
