[package]
name = "ajour"
description = "A World of Warcraft addon manager"
version = "0.6.1"
authors = ["Casper Rogild Storm"]
license = "MIT"
homepage = "https://github.com/casperstorm/ajour"
repository = "https://github.com/casperstorm/ajour"
readme = "README.md"
keywords = ["addon-manager", "wow", "world-of-warcraft", "addon"]
categories = ["graphics", "gui", "games"]
edition = "2018"

[features]
default = ["wgpu"]
wgpu = ["ajour-widgets/wgpu", "iced/wgpu", "iced/default_system_font"]
opengl = ["ajour-widgets/opengl", "iced/glow", "iced/glow_default_system_font"]

[dependencies]
ajour-core = { version = "0.6.1", path = "crates/core", features=['gui'] }
ajour-weak-auras = { version = "0.6.1", path = "crates/weak_auras" }
ajour-widgets = { version = "0.6.1", path = "crates/widgets" }

iced = { version = "0.2.0", default-features = false, features = ["debug"] }
iced_futures = { version = "0.2", features = ["async-std"] }
iced_native = { version = "0.3" }
async-std = "1.6.2"
isahc = { version = "0.9.6", features = ["json"] }
image = "0.23.8"
native-dialog = "0.4.2"
opener = "0.4.1"
chrono = { version = "0.4", features = ['serde'] }
log = "0.4"
fern = "0.6"
timeago = "0.2.1"
log-panics = { version = "2.0", features=['with-backtrace'] }
structopt = "0.3"
num-format = "0.4.0"
futures = "0.3"
version-compare = "0.0.11"
open = "1"
fuzzy-matcher = "0.3.7"
color-eyre = { version = "0.5.10", default-features = false }

# https://docs.rs/color-eyre/*/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[build-dependencies]
embed-resource = "1.3.3"

[workspace]
members = [
    ".",
    "crates/core",
    "crates/widgets",
    "crates/weak_auras"
]
