[package]
name = "ajour"
description = "A World of Warcraft addon manager"
version = "1.1.0-rc.1"
authors = ["Casper Rogild Storm"]
license = "MIT"
homepage = "https://github.com/ajour/ajour"
repository = "https://github.com/ajour/ajour"
readme = "README.md"
keywords = ["addon-manager", "wow", "world-of-warcraft", "addon"]
categories = ["graphics", "gui", "games"]
edition = "2018"

[features]
default = ["wgpu"]
wgpu = ["ajour-widgets/wgpu", "iced/wgpu", "iced/default_system_font"]
opengl = ["ajour-widgets/opengl", "iced/glow", "iced/glow_default_system_font"]

[dependencies]
ajour-core = { version = "1.1.0-rc.1", path = "crates/core", features=['gui'] }
ajour-weak-auras = { version = "1.1.0-rc.1", path = "crates/weak_auras" }
ajour-widgets = { version = "1.1.0-rc.1", path = "crates/widgets" }

iced = { path= "../iced", default-features = false, features = ["debug"] }
iced_futures = { path= "../iced/futures", features = ["async-std"] }
iced_native = { path= "../iced/native" }
async-std = "1.6.2"
isahc = { version = "0.9.6", features = ["json"] }
image = "0.23.8"
native-dialog = "0.4.2"
opener = "0.4.1"
chrono = { version = "0.4", features = ['serde'] }
log = "0.4"
fern = "0.6"
timeago = "0.2.1"
isolang = "1.0.0"
log-panics = { version = "2.0", features=['with-backtrace'] }
structopt = "0.3"
num-format = "0.4.0"
futures = "0.3"
version-compare = "0.0.11"
open = "1"
anyhow = "1.0"
fuzzy-matcher = "0.3.7"
json-gettext = "3.2.8"
strfmt = "0.1.6"
once_cell = "1.6.0"
serde = { version = "1.0.114", features=['derive'] }
serde_json = "1.0.57"


[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[build-dependencies]
embed-resource = "1.3.3"

[workspace]
members = [
    ".",
    "crates/core",
    "crates/widgets",
    "crates/weak_auras"
]
