[package]
name = "ajour-core"
description = "Core library for Ajour"
version = "0.5.4"
authors = ["Casper Rogild Storm"]
license = "MIT"
homepage = "https://github.com/casperstorm/ajour"
repository = "https://github.com/casperstorm/ajour"
edition = "2018"

[features]
default = []
gui = ['iced_native']

[[bin]]
name = "fingerprint_addon"

[[bin]]
name = "parse_addon_directory"

[[bin]]
name = "parse_toc"

[dependencies]
regex = "1.4.1"
fancy-regex = "0.4.0" # Regex with backtracking
async-std = { version = "1.6.2", features = ["unstable"] }
dirs-next = "2.0.0"
serde = { version = "1.0.114", features=['derive'] }
serde_yaml = "0.8.13"
serde_json = "1.0.57"
isahc = { version = "0.9.6", features = ["json"] }
zip = "0.5.6"
glob = "0.3.0"
rayon = "1.5.0"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ['serde'] }
log = "0.4"
fern = "0.6"
walkdir = "2.3"
retry = "1.1"
futures = "0.3"
async-trait = "0.1.41"
dyn-clone = "1.0.3"
thiserror = "1.0"
path-slash = "0.1.3"

iced_native = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "1.0"
tar = "0.4"
