[package]
name = "ajour-core"
description = "Core library for Ajour"
version = "0.7.2-rc.1"
authors = ["Casper Rogild Storm"]
license = "MIT"
homepage = "https://github.com/ajour/ajour"
repository = "https://github.com/ajour/ajour"
edition = "2018"

[features]
default = []
gui = ['iced_native']

[[bin]]
name = "fingerprint_addon"

[[bin]]
name = "parse_addon_directory"

[[bin]]
name = "parse_toc"

[dependencies]
regex = "1.4.3"
fancy-regex = "0.5.0" # Regex with backtracking
async-std = { version = "1.9.0", features = ["unstable"] }
dirs-next = "2.0.0"
serde = { version = "1.0.123", features=['derive'] }
serde_yaml = "0.8.17"
serde_json = "1.0.62"
isahc = { version = "1.1.0", features = ["json"] }
zip = "0.5.10"
glob = "0.3.0"
rayon = "1.5.0"
once_cell = "1.6.0"
chrono = { version = "0.4", features = ['serde'] }
log = "0.4"
fern = "0.6"
walkdir = "2.3"
retry = "1.2"
futures = "0.3"
async-trait = "0.1.42"
dyn-clone = "1.0.4"
thiserror = "1.0"
path-slash = "0.1.4"

iced_native = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "1.0"
tar = "0.4"
