[package]
name = "ajour-widgets"
description = "Widget library for Ajour"
version = "0.7.0-rc.2"
authors = ["Casper Rogild Storm", "tarkah <admin@tarkah.dev>"]
license = "MIT"
homepage = "https://github.com/ajour/ajour"
repository = "https://github.com/ajour/ajour"
edition = "2018"

[features]
default = []
wgpu = ["iced_wgpu"]
opengl = ["iced_glow"]

[dependencies]
iced_native = { version = "0.3" }
iced_graphics = { version = "0.1" }
iced_core = { version = "0.3" }

iced_wgpu = { version = "0.3", optional = true }
iced_glow = { version = "0.1", optional = true }
