[package]
name = "ajour-widgets"
description = "Widget library for Ajour"
version = "1.1.0-rc.1"
authors = ["Casper Rogild Storm", "tarkah <admin@tarkah.dev>"]
license = "MIT"
homepage = "https://github.com/ajour/ajour"
repository = "https://github.com/ajour/ajour"
edition = "2018"

[features]
default = []
wgpu = ["iced_wgpu"]
opengl = ["iced_glow"]

[dependencies]
iced_native = { path= "../../../iced/native" }
iced_graphics = { path= "../../../iced/graphics" }
iced_core = { path= "../../../iced/core" }

iced_wgpu = { path= "../../../iced/wgpu", optional = true }
iced_glow = { path= "../../../iced/glow", optional = true }
